# misc

./: .editorconfig  .gitignore  Berksfile  CMakeLists.txt  README.md  Vagrantfile  foo
ansible-playbook/cloud-init/: dev-cloud-init.yml  hosts  site.yml
app/: package.json
archlinux/: Vagrantfile  archlinux-x86_64.json
archlinux/scripts/: configration.sh  disk_format.sh  pacstrap.sh  vagrant_configration.sh
aws/: Vagrantfile
centos65/: README.md  Vagrantfile
centos7/: README.md  Vagrantfile  ansible.cfg  config.rb.sample  config.yml  requirements.yml  run-ansible.sh  site.yml  userdata
centos70/: Berksfile  Gemfile  README.md  Vagrantfile  foo.json  run-chef-solo.sh
chrome_ext/: manifest.json
chrome_ext/js/: change_html_title.js
clang/: CMakeLists.txt
clang/hello_c/: CMakeLists.txt
clang/hello_c/include/: hello_world.h  static_lib.h
clang/hello_c/lib/: CMakeLists.txt  shared_lib.c  static_lib.c
clang/hello_c/src/: hello_world.c  main.c
clang/networking/: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md
clang/networking/include/: msock.h
clang/networking/src/: CMakeLists.txt  client.c  msock.c  server.c
clang/networking/test/: CMakeLists.txt  msock_test.c
clang/src/: main.c
cookbooks/develop/: CHANGELOG.md
docker/rocketchat/: docker-compose.yml
electron/: main.js  package.json
frontend/hello-frontend/: canvas.html  dom.html  dom.js  gulpfile.coffee  gulpfile.js  index.html  package.json
git-hooks/: pre-commit-rubocop
golang/cgo/: Makefile
golang/helloGo/: Makefile  helloGolang  main.go
hashicorp/consul/: config.json  consul.service
hashicorp/nomad/: batch.nomad  client.hcl  config.hcl  node-1.hcl  node-2.hcl  registry.nomad  server.hcl  wordpress.nomad
hashicorp/packer/: archlinux-x86_64.json  iso_download.sh
hashicorp/terraform/: README.md  aws.tf
js/electron/: .gitignore  index.html  index.js  main.js  package-lock.json  type.js  type.ts
kickstart/: isolinux.cfg  ks.cfg  mkiso.sh
kotlin/: .gitignore  hello.kt
kotlin/lib/: extends.kt  package.kt
nodejs/express-app/: app.coffee  package.json  test.coffee
nodejs/hello-frontend/: package-lock.json  package.json
nodejs/hello_hubot/: README.md  package-lock.json  package.json
nodejs/hubot_typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
nodejs/js-testing/: .eslintrc.json  .gitignore  package.json
nodejs/pandoc-filter/: README.md  forRedmine.js  package.json
nodejs/static_page/: app.js  package.json
nodejs/web-crawling/: ashitaka.txt  gulpfile.js  life.txt  main.js  package.json
nodes/: vagrant-centos65.json
openstack/: Vagrantfile  config.sample
python/: .gitignore  Makefile  setup.py
python/django-polls/: MANIFEST.in  README.md
python/features/: sample.feature
python/flask/: Makefile  Pipfile  app.py
routine/: Makefile  README.md  ansible.cfg  site.yml
routine/operations/: config  gather_specs.yml  make_ssh_config.yml  make_user.yml  manage_etc_host.yml  register_key.yml  shutdown.yml
routine/secret/: secret.yml
routine/templates/: hosts.j2  list.csv.j2  node_spec.md  temp.md  yum.conf.j2
rubygems/c_bar/: Makefile  bar.c  extconf.rb
rubygems/hello_c/: Gemfile  README.md  Rakefile  hello_c.gemspec
rubygems/hello_ffi/: .gitignore  Gemfile  Rakefile
rubygems/helloworld/: .rspec  Gemfile  README.md  Rakefile  helloworld.gemspec
rust/dining_philosophers/: Cargo.toml
rust/guessing_game/: Cargo.toml
rust/http/: Cargo.toml
rust/log-collector/: Cargo.toml  docker-compose.yml
rust/log-collector/api/: Cargo.toml
rust/log-collector/api/src/: lib.rs
rust/log-collector/server/: Cargo.toml
rust/log-collector/server/migrations/2019-08-02-141841_create_logs/: down.sql  up.sql
rust/log-collector/server/src/: db.rs  handlers.rs  main.rs  model.rs
rust/log-parser/: Cargo.toml
rust/my-redis/: Cargo.toml
rust/parser/: Cargo.toml
rust/playground/: Cargo.toml  Hello.txt
rust/socket_programming/: Cargo.toml
sandbox/: Vagrantfile  box.yml
scripts/: ansible-inspect  ansible-skel  ansible_skelton.sh  bus.sh  cloud-config.cfg  connectrc-gen  cvt_audit.go  dev-playbook-gen  docker-erase  docker-ip  docker-tmp  echoproxy  install-oh-my-fish  install_rust_compo.sh  local-deploy.sh  multi-ping  nova_boot.sh  paccache-clear  rsync.sh  rsync_with_log  screen.sh  ssh_backup.sh  sshconfig-gen  tree  tssh
scripts/ansible/: ansible-check
scripts/archlinux/: check-lostfiles  paccache-clear
scripts/coreos-config/: Gemfile  README  cloud-config.cfg  cloud-config.yml  cloud-config.yml.sample  config.rb  make-config.rb  user-data
scripts/docker/: docker-clean  dockviz
scripts/git/: git-emailcheck  git-numstat  git-tarball  git-today  git-url-ssh
scripts/powershell/: install_chocolatey.ps1  proxy.ps1  sudo.ps1
scripts/proxy/: echoproxy
scripts/ssh/: ssh_backup.sh  sshconfig-gen
scripts/ssh_scripts/: ssh_backup.sh  sshconfig-gen
scripts/utils/: burn-rasp.sh  cmake-clean  color-echo  cure_name  delivery.sh  gather_info  install_lsp.sh  (+21 more)
vagrant/: README.md
web/: canvas.js  dom.html  hello.css  index.html
(+255 files in other folders)
