[package]
name = "api"
version = "0.1.0"
authors = ["kse201 <kse.201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
serde_derive = "1.0.98"
chrono = { version = "0.4.0", features = ["serde"] }
