[package]
name = "server"
version = "0.1.0"
authors = ["kse201 <kse.201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6"
actix-web = "0.7"
failure = "0.1"
actix-rt = "0.2.4"

api = {path = "../api"}